--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "discord-rich-presence": "^0.0.8",
+    "discord-rpc": "^4.0.1",
     "qbittorrent-api-v2": "^1.2.2"
   }
 }
